# pgenie

./: .gitignore  .ormolu  AGENTS.md  CHANGELOG.md  CODING_STANDARDS.md  CONTEXT.md  LICENSE  README.md  cabal.project  cabal.project.freeze  flake.nix  pgenie.cabal  stack.yaml
demo/: README.md  (+3 more)
pgenie-gen-contract-v5/: pgenie-gen-contract-v5.cabal
pgenie-gen-contract-v5/src/GenContractV5/Input/: CustomTypeRef.hs
pgenie-gen-contract-v5/test/GenContractV5/Input/: DhallSpec.hs  ScalarSpec.hs
pgenie-interpreters/: pgenie-interpreters.cabal
pgenie-ui/: pgenie-ui.cabal
pgenie-ui/src/: Ui.hs
pgenie-utils/: pgenie-utils.cabal
pgenie-utils/src/Utils/: Text.hs
src/gen-bridge/: GenBridge.hs  PGenieGen.hs  gen-bridge.cabal  pgenie-gen-bridge.cabal
src/gen-bridge/GenBridge/: AesonDeriver.hs  Bundle.hs  Contract.hs  ContractVersion.hs  Dispatch.hs  Load.hs  Location.hs  Model.hs  Prelude.hs
src/gen-bridge/GenBridge/Aeson/: Deriver.hs
src/gen-bridge/GenBridge/Contract/: Report.hs
src/gen-bridge/GenBridge/Dhall/: Decode.hs  Deriving.hs  ExprViews.hs  Orphans.hs
src/gen-bridge/GenBridge/Dhall/Orphans/: NonEmpty.hs  Path.hs
src/gen-bridge/GenBridge/Model/: Input.hs  Output.hs
src/gen-bridge/GenBridge/Prelude/: Path.hs
src/gen-bridge/PGenieGen/: AesonDeriver.hs  Bundle.hs  ContractVersion.hs  Load.hs  Location.hs  Model.hs  Prelude.hs
src/gen-bridge/PGenieGen/Dhall/: Decode.hs  Deriving.hs  ExprViews.hs  Orphans.hs
src/gen-bridge/PGenieGen/Model/: Aeson.hs  Input.hs  Output.hs
src/gen-bridge/test/: Gen.dhall
src/gen-contract-base/: gen-contract-base.cabal  pgenie-gen-contract-base.cabal
src/gen-contract-base/GenContractBase/Aeson/: Deriver.hs
src/gen-contract-base/GenContractBase/Dhall/: Deriving.hs
src/gen-contract-base/GenContractBase/Prelude/: Path.hs
src/gen-contract-base/src/GenContractBase/: Prelude.hs
src/gen-contract-v4/: gen-contract-v4.cabal  pgenie-gen-contract-v4.cabal
src/gen-contract-v4/GenContractV4/: Contract.hs  Input.hs  Output.hs
src/gen-contract-v4/GenContractV4/Fixtures/: Fixture1.hs
src/gen-contract-v4/GenContractV4/Input/: CustomType.hs  Member.hs  Name.hs  Primitive.hs  QueryFragment.hs  Result.hs  ResultRows.hs  ResultRowsCardinality.hs  Scalar.hs  Version.hs
src/gen-contract-v4/GenContractV4/Output/: Output.hs  Report.hs
src/gen-contract-v4/src/: GenContractV4.hs
src/gen-contract-v5/: GenContractV5.hs  gen-contract-v5.cabal  pgenie-gen-contract-v5.cabal
src/gen-contract-v5/GenContractV5/: Contract.hs  Fixtures.hs  Input.hs  Output.hs
src/gen-contract-v5/GenContractV5/Fixtures/: Fixture1.hs
src/gen-contract-v5/GenContractV5/Input/: CustomType.hs  CustomTypeDefinition.hs  CustomTypeRef.hs  EnumVariant.hs  Member.hs  Migration.hs  Name.hs  Primitive.hs  Project.hs  Query.hs  QueryFragment.hs  Result.hs  ResultRows.hs  ResultRowsCardinality.hs  Scalar.hs  Value.hs  Var.hs  Version.hs
src/gen-contract-v5/GenContractV5/Output/: File.hs  Output.hs  OutputOk.hs  Report.hs  ReportYaml.hs
src/gen-contract-v5/test/: GenContractV5Spec.hs
src/gen-contract-versioning/: gen-contract-versioning.cabal  pgenie-gen-contract-versioning.cabal
src/gen-contract-versioning/src/: GenContractVersioning.hs
src/gen-contract-versioning/test/: GenContractVersioningSpec.hs
src/gen-contract-versioning/test/Mock/: MockV1.hs  MockV2.hs  MockV3.hs
src/infra/: Infra.hs  infra.cabal  pgenie-infra.cabal
src/infra/Infra/Adapters/: Analyser.hs  Display.hs  Main.hs  Script.hs
src/infra/Infra/Devices/: Display.hs  Main.hs
src/infra/test/: InferQueryTypesSpec.hs  MigrationSplittingSpec.hs
src/interpreters/: interpreters.cabal  pgenie-interpreters.cabal
src/interpreters/Interpreters/: Emitting.hs  Observing.hs
src/logic/: Logic.hs  logic.cabal  pgenie-logic.cabal
src/logic/Logic/: Algebra.hs  App.hs  Capabilities.hs  CodeGen.hs  CustomTypeSignatureFile.hs  Domain.hs  Dsl.hs  Error.hs  Features.hs  GeneratorHashes.hs  IndexOptimizer.hs  Migrations.hs  Name.hs  ProjectFile.hs  ProjectModel.hs  QueryAnalysis.hs  QuerySignatures.hs  RedundantIndexDetector.hs  Report.hs  SeqScanDetector.hs  SignatureFile.hs  SqlTemplate.hs  StagingAlgebra.hs  SyntaxAnalyser.hs  Workflows.hs
src/logic/Logic/Capabilities/: Fs.hs  GeneratorRuntime.hs  IndexCatalog.hs  QueryAnalysis.hs  Reporting.hs  SeqScanExplain.hs  Staging.hs
src/logic/Logic/Commands/: Generate.hs  Introspect.hs
src/logic/Logic/Domain/: CustomTypeOrdering.hs  CustomTypeSignature.hs  GeneratorHashes.hs  IndexOptimization.hs  Name.hs  ProjectFile.hs  QueryAnalysis.hs  QuerySignature.hs  Report.hs  SeqScanFinding.hs  SqlTemplate.hs  SyntaxAnalyser.hs
src/logic/Logic/Features/: CustomTypeSignatureFile.hs  Fs.hs  GeneratorHashes.hs  IndexOptimizer.hs  Migrations.hs  Name.hs  ProjectFile.hs  QueryAnalysis.hs  Report.hs  SeqScanDetector.hs  SignatureFile.hs  SqlTemplate.hs  Staging.hs  SyntaxAnalyser.hs
src/logic/Logic/Name/: Megaparsec.hs
src/logic/Logic/Procedures/: Analyse.hs  AnalyseProject.hs  Generate.hs  GenerateCode.hs  GenerateQuerySignatures.hs  GenerateTypeSignatures.hs  ManageIndexes.hs
src/logic/Logic/SyntaxAnalyser/: AstInterpreter.hs  Data.hs
src/logic/Logic/Workflows/: Analyse.hs  AnalyseProject.hs  Generate.hs  GenerateCode.hs  GenerateQuerySigs.hs  GenerateTypeSigs.hs  ManageIndexes.hs
src/logic/src/: Logic.hs
src/pgenie-interpreters/: pgenie-interpreters.cabal
src/pgenie-logic/: pgenie-logic.cabal
src/pgenie-logic/src/Logic/: Capabilities.hs
src/pgn/: Main.hs  pgenie-pgn.cabal  pgn.cabal
src/pgn/src/pgn/: Main.hs
src/postgresql-script-splitter/: postgresql-script-splitter.cabal
src/postgresql-script-splitter/test/: Main.hs
src/ui/: Ui.hs  pgenie-ui.cabal  ui.cabal
src/ui/Ui/: Commands.hs  Display.hs  Framework.hs
src/ui/Ui/Commands/: Analyse.hs  Check.hs  Generate.hs  ManageIndexes.hs  Model.hs  Sign.hs
src/ui/Ui/Display/: Memory.hs  View.hs
src/ui/Ui/Frameworks/: CliUi.hs
src/ui/src/Ui/: Commands.hs
src/utils/: pgenie-utils.cabal  utils.cabal
src/utils/Utils/: Prelude.hs  Text.hs
src/utils/src/Utils/: Prelude.hs
(+492 files in other folders)
