cabal-version: 3.4
name: pgenie
version: 0
category: Database
synopsis: Type-safe PostgreSQL client code generator
description:
  Analyzes SQL migrations and queries to generate type-safe client libraries.

homepage: https://github.com/nikita-volkov/pgenie
bug-reports: https://github.com/nikita-volkov/pgenie/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2025, Nikita Volkov
license: GPL-3.0-or-later
license-file: LICENSE
extra-source-files:
  cabal.project
  README.md

source-repository head
  type: git
  location: https://github.com/nikita-volkov/pgenie

common base
  default-language: Haskell2010
  default-extensions:
    ApplicativeDo
    Arrows
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    LiberalTypeSynonyms
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoFieldSelectors
    NoImplicitPrelude
    NoMonomorphismRestriction
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    ParallelListComp
    PatternGuards
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UnboxedTuples
    ViewPatterns

common executable
  import: base
  ghc-options:
    -O2
    -threaded
    "-with-rtsopts=-N -I0 -qg"

common test
  import: base
  ghc-options:
    -threaded
    "-with-rtsopts=-N -I0 -qg"

executable pgn
  import: executable
  hs-source-dirs: src/pgn/
  main-is: Main.hs
  autogen-modules: Paths_pgenie
  other-modules: Paths_pgenie
  build-depends:
    base,
    pgenie:infra,
    pgenie:ui,
    pgenie:utils,
    text,

library utils
  import: base
  hs-source-dirs: src/utils/
  exposed-modules:
    Utils.Prelude
    Utils.Text

  build-depends:
    algebraic-path,
    base,
    bytestring,
    containers,
    data-has,
    hashable,
    lawful-conversions,
    monad-parallel,
    mtl,
    profunctors,
    QuickCheck,
    quickcheck-instances,
    relations,
    syntactic-class,
    text,
    text-builder,
    text-builder-lawful-conversions,
    time,
    transformers,
    tuple,
    uuid,
    vector,
    vector-instances,
    witherable,

library logic
  import: base
  hs-source-dirs: src/logic/
  exposed-modules:
    Logic
    Logic.Algebra
    Logic.CustomTypeSignatureFile
    Logic.IndexOptimizer
    Logic.Name
    Logic.ProjectFile
    Logic.Report
    Logic.SeqScanDetector
    Logic.SignatureFile
    Logic.SqlTemplate
    Logic.SyntaxAnalyser

  other-modules:
    Logic.GeneratorHashes
    Logic.Name.Megaparsec
    Logic.SyntaxAnalyser.AstInterpreter
    Logic.SyntaxAnalyser.Data

  build-depends:
    aeson,
    algebraic-path,
    containers,
    dhall,
    foldl,
    megaparsec,
    monad-parallel,
    pgenie-gen,
    pgenie:utils,
    postgresql-syntax,
    QuickCheck,
    syntactic-class,
    text,
    text-builder,
    vector,
    yaml-unscrambler,

test-suite logic-test
  import: test
  type: exitcode-stdio-1.0
  hs-source-dirs: src/logic-test
  main-is: Main.hs
  other-modules:
    CustomTypeSignatureFileSpec
    IndexOptimizerSpec
    NameSpec
    ProjectFileSpec
    SeqScanDetectorSpec
    SignatureFileSpec
    SqlTemplateSpec
    SyntaxAnalyserSpec

  build-tool-depends:
    hspec-discover:hspec-discover

  build-depends:
    aeson,
    algebraic-path,
    hspec,
    megaparsec,
    pgenie-gen,
    pgenie:logic,
    pgenie:utils,
    QuickCheck,
    text,

library runtime
  import: base
  hs-source-dirs: src/runtime/
  exposed-modules:
    Runtime.Emitting
    Runtime.Observation

  build-depends:
    monad-parallel,
    pgenie:logic,
    pgenie:utils,
    text,

test-suite infra-test
  import: test
  type: exitcode-stdio-1.0
  hs-source-dirs: src/infra-test
  main-is: Main.hs
  other-modules:
    InferQueryTypesSpec

  build-tool-depends:
    hspec-discover:hspec-discover

  build-depends:
    fx,
    hspec,
    pgenie-gen,
    pgenie:infra,
    pgenie:logic,
    pgenie:utils,
    postgresql-libpq,
    resourcet,
    testcontainers,
    testcontainers-postgresql,
    text,

library infra
  import: base
  hs-source-dirs: src/infra/
  exposed-modules:
    Infra
    Infra.Adapters.Analyser

  other-modules:
    Infra.Adapters.Analyser.Embeddings.Sessions
    Infra.Adapters.Analyser.Scopes.Testcontainers
    Infra.Adapters.Analyser.Scopes.Testcontainers.IO
    Infra.Adapters.Analyser.Sessions
    Infra.Adapters.Analyser.Sessions.Algebras.Procedure
    Infra.Adapters.Analyser.Sessions.Domain
    Infra.Adapters.Analyser.Sessions.LibpqExtras.LawfulConversions
    Infra.Adapters.Analyser.Sessions.LibpqExtras.Procedures.DescribeQuery
    Infra.Adapters.Analyser.Sessions.Procedures
    Infra.Adapters.Analyser.Sessions.Procedures.DescribeQuery
    Infra.Adapters.Analyser.Sessions.Procedures.GetIndexes
    Infra.Adapters.Analyser.Sessions.Procedures.ResolveColumn
    Infra.Adapters.Analyser.Sessions.Procedures.ResolveColumn.Statements
    Infra.Adapters.Analyser.Sessions.Procedures.ResolveColumn.Statements.GetAttributeByRelationAndOffset
    Infra.Adapters.Analyser.Sessions.Procedures.ResolveParamNullabilities
    Infra.Adapters.Analyser.Sessions.Procedures.ResolveParamNullabilities.DefaultTextualValue
    Infra.Adapters.Analyser.Sessions.Procedures.ResolveTypeByOid
    Infra.Adapters.Analyser.Sessions.Procedures.ResolveTypeByOid.Statements
    Infra.Adapters.Analyser.Sessions.Procedures.ResolveTypeByOid.Statements.SelectAttributes
    Infra.Adapters.Analyser.Sessions.Procedures.ResolveTypeByOid.Statements.SelectEnumLabels
    Infra.Adapters.Analyser.Sessions.Procedures.ResolveTypeByOid.Statements.SelectRelationColumns
    Infra.Adapters.Analyser.Sessions.Procedures.ResolveTypeByOid.Statements.SelectType
    Infra.Adapters.Main

  build-tool-depends:
    autoexporter:autoexporter

  build-depends:
    algebraic-path,
    attoparsec,
    base,
    directory,
    fx,
    hasql,
    hasql-dev,
    hasql-mapping,
    hasql-pool,
    hasql-th,
    monad-parallel,
    mtl,
    pgenie-gen,
    pgenie:logic,
    pgenie:runtime,
    pgenie:utils,
    postgresql-libpq,
    resourcet,
    syntactic-class,
    testcontainers,
    testcontainers-postgresql,
    text,
    text-builder,
    uuid,
    vector,

library ui
  import: base
  hs-source-dirs: src/ui/
  exposed-modules:
    Ui
    Ui.Display.Components.Main
    Ui.Display.Components.Main.View

  other-modules:
    Ui.Commands
    Ui.Commands.Analyse
    Ui.Commands.Generate
    Ui.Commands.ManageIndexes
    Ui.Display
    Ui.Display.Components.ProgressBar
    Ui.Display.Components.ProgressBar.View
    Ui.Framework

  build-depends:
    optparse-applicative,
    pgenie:logic,
    pgenie:runtime,
    pgenie:utils,
    text,
    text-builder,

test-suite ui-test
  import: test
  type: exitcode-stdio-1.0
  hs-source-dirs: src/ui-test
  main-is: Main.hs
  other-modules:
    Ui.Display.Components.MainSpec

  build-tool-depends:
    hspec-discover:hspec-discover

  build-depends:
    hspec,
    pgenie:logic,
    pgenie:runtime,
    pgenie:ui,
    pgenie:utils,
    text,
    text-builder,
