cabal-version: 3.4
name: pgenie
version: 0
category: Database
synopsis: Type-safe PostgreSQL client code generator
description:
  Analyzes SQL migrations and queries to generate type-safe client libraries.

homepage: https://github.com/nikita-volkov/pgenie
bug-reports: https://github.com/nikita-volkov/pgenie/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2025, Nikita Volkov
license: GPL-3.0-or-later
license-file: LICENSE
extra-source-files:
  cabal.project
  README.md

source-repository head
  type: git
  location: https://github.com/nikita-volkov/pgenie

common base
  default-language: GHC2024
  default-extensions:
    ApplicativeDo
    BlockArguments
    DefaultSignatures
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    LiberalTypeSynonyms
    MagicHash
    MultiWayIf
    NoFieldSelectors
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    ParallelListComp
    PatternSynonyms
    RecordWildCards
    StrictData
    TypeFamilies
    ViewPatterns

common executable
  import: base
  ghc-options:
    -O2
    -threaded
    "-with-rtsopts=-N -I0 -qg"

common test
  import: base
  ghc-options:
    -threaded
    "-with-rtsopts=-N -I0 -qg"

executable pgn
  import: executable
  hs-source-dirs: src/pgn/
  main-is: Main.hs
  autogen-modules: Paths_pgenie
  other-modules: Paths_pgenie
  build-depends:
    base,
    pgenie:infra,
    pgenie:ui,
    pgenie:utils,
    text,

library utils
  import: base
  hs-source-dirs: src/utils/
  exposed-modules:
    Utils.Prelude
    Utils.Text

  build-depends:
    algebraic-path,
    base,
    bytestring,
    containers,
    data-has,
    hashable,
    lawful-conversions,
    monad-parallel,
    mtl,
    profunctors,
    QuickCheck,
    quickcheck-instances,
    relations,
    syntactic-class,
    text,
    text-builder,
    text-builder-lawful-conversions,
    time,
    transformers,
    tuple,
    uuid,
    vector,
    vector-instances,
    witherable,

library gen-contract-base
  import: base
  hs-source-dirs: src/gen-contract-base/
  exposed-modules:
    GenContractBase.Aeson.Deriver
    GenContractBase.Dhall.Decode
    GenContractBase.Dhall.Deriving
    GenContractBase.Dhall.Orphans
    GenContractBase.Dhall.Orphans.NonEmpty
    GenContractBase.Dhall.Orphans.Path
    GenContractBase.Prelude
    GenContractBase.Prelude.Path

  build-depends:
    aeson,
    algebraic-path,
    base,
    cases,
    dhall,
    pgenie:utils,
    prettyprinter,
    template-haskell,
    text,

library gen-contract-versioning
  import: base
  hs-source-dirs: src/gen-contract-versioning/
  exposed-modules:
    GenContractVersioning

  build-depends:
    base,
    text,

library gen-contract-v4
  import: base
  hs-source-dirs: src/gen-contract-v4/
  exposed-modules:
    GenContractV4
    GenContractV4.Input
    GenContractV4.Output

  other-modules:
    GenContractV4.Input.ArraySettings
    GenContractV4.Input.CustomType
    GenContractV4.Input.CustomTypeDefinition
    GenContractV4.Input.EnumVariant
    GenContractV4.Input.Member
    GenContractV4.Input.Migration
    GenContractV4.Input.Name
    GenContractV4.Input.Primitive
    GenContractV4.Input.Project
    GenContractV4.Input.Query
    GenContractV4.Input.QueryFragment
    GenContractV4.Input.Result
    GenContractV4.Input.ResultRows
    GenContractV4.Input.ResultRowsCardinality
    GenContractV4.Input.Scalar
    GenContractV4.Input.Value
    GenContractV4.Input.Var
    GenContractV4.Input.Version
    GenContractV4.Output.File
    GenContractV4.Output.Output
    GenContractV4.Output.OutputOk
    GenContractV4.Output.Report

  build-depends:
    aeson,
    dhall,
    pgenie:gen-contract-base,
    pgenie:gen-contract-versioning,
    pgenie:utils,
    QuickCheck,

library gen-bridge
  import: base
  hs-source-dirs: src/gen-bridge/
  exposed-modules:
    GenBridge
    GenBridge.Contract

  other-modules:
    GenBridge.Bundle
    GenBridge.ContractVersion
    GenBridge.Dhall.ExprViews
    GenBridge.Dispatch
    GenBridge.Load
    GenBridge.Location

  build-depends:
    aeson,
    algebraic-path,
    dhall,
    dhall-json,
    microlens,
    pgenie:gen-contract-v5,
    pgenie:gen-contract-versioning,
    pgenie:utils,
    template-haskell,
    text,

library gen-contract-v5
  import: base
  hs-source-dirs: src/gen-contract-v5/
  exposed-modules:
    GenContractV5
    GenContractV5.Fixtures
    GenContractV5.Input
    GenContractV5.Input.CustomType
    GenContractV5.Input.CustomTypeDefinition
    GenContractV5.Input.CustomTypeRef
    GenContractV5.Input.Member
    GenContractV5.Input.Project
    GenContractV5.Input.Query
    GenContractV5.Input.Result
    GenContractV5.Input.ResultRows
    GenContractV5.Input.Scalar
    GenContractV5.Input.Value
    GenContractV5.Output
    GenContractV5.Output.File
    GenContractV5.Output.Output
    GenContractV5.Output.OutputOk

  other-modules:
    GenContractV5.Fixtures.Fixture1

  build-depends:
    cases,
    dhall,
    pgenie:gen-contract-base,
    pgenie:gen-contract-v4,
    pgenie:gen-contract-versioning,
    pgenie:utils,
    QuickCheck,
    rerebase,

library logic
  import: base
  hs-source-dirs: src/logic/
  exposed-modules:
    Logic
    Logic.Capabilities
    Logic.Capabilities.Fs
    Logic.Capabilities.GeneratorRuntime
    Logic.Capabilities.IndexCatalog
    Logic.Capabilities.Migrations
    Logic.Capabilities.QueryAnalysis
    Logic.Capabilities.Reporting
    Logic.Capabilities.SeqScanExplain
    Logic.Capabilities.Staging
    Logic.Domain
    Logic.Domain.CustomTypeOrdering
    Logic.Domain.CustomTypeSignature
    Logic.Domain.GeneratorHashes
    Logic.Domain.IndexOptimization
    Logic.Domain.Name
    Logic.Domain.ProjectFile
    Logic.Domain.QueryAnalysis
    Logic.Domain.QuerySignature
    Logic.Domain.Report
    Logic.Domain.SeqScanFinding
    Logic.Domain.SqlTemplate
    Logic.Domain.SyntaxAnalyser
    Logic.Procedures.Analyse
    Logic.Procedures.AnalyseProject
    Logic.Procedures.Generate
    Logic.Procedures.GenerateCode
    Logic.Procedures.GenerateQuerySignatures
    Logic.Procedures.GenerateTypeSignatures
    Logic.Procedures.ManageIndexes

  other-modules:
    Logic.Domain.Name.Megaparsec
    Logic.Domain.SyntaxAnalyser.AstInterpreter
    Logic.Domain.SyntaxAnalyser.Data

  build-depends:
    aeson,
    algebraic-path,
    containers,
    dhall,
    foldl,
    hspec,
    megaparsec,
    monad-parallel,
    pgenie:gen-bridge,
    pgenie:utils,
    postgresql-syntax,
    QuickCheck,
    syntactic-class,
    text,
    text-builder,
    vector,
    yaml-unscrambler,

test-suite logic-test
  import: test
  type: exitcode-stdio-1.0
  hs-source-dirs: src/logic-test
  main-is: Main.hs
  build-depends:
    hspec,
    pgenie:logic,
    pgenie:utils,

library interpreters
  import: base
  hs-source-dirs: src/interpreters/
  exposed-modules:
    Interpreters.Observing

  build-depends:
    monad-parallel,
    pgenie:logic,
    pgenie:utils,
    text,

test-suite infra-test
  import: test
  type: exitcode-stdio-1.0
  hs-source-dirs: src/infra-test
  main-is: Main.hs
  other-modules:
    InferQueryTypesSpec

  build-tool-depends:
    hspec-discover:hspec-discover

  build-depends:
    base,
    fx,
    hspec,
    pgenie:gen-bridge,
    pgenie:infra,
    pgenie:logic,
    pgenie:utils,
    postgresql-libpq,
    resourcet,
    testcontainers,
    testcontainers-postgresql,
    text,

library infra
  import: base
  hs-source-dirs: src/infra/
  exposed-modules:
    Infra
    Infra.Adapters.Analyser

  other-modules:
    Infra.Adapters.Analyser.Embeddings.Sessions
    Infra.Adapters.Analyser.Scopes.Testcontainers
    Infra.Adapters.Analyser.Scopes.Testcontainers.IO
    Infra.Adapters.Analyser.Sessions
    Infra.Adapters.Analyser.Sessions.Algebras.Procedure
    Infra.Adapters.Analyser.Sessions.Domain
    Infra.Adapters.Analyser.Sessions.LibpqExtras.LawfulConversions
    Infra.Adapters.Analyser.Sessions.LibpqExtras.Procedures.DescribeQuery
    Infra.Adapters.Analyser.Sessions.Procedures
    Infra.Adapters.Analyser.Sessions.Procedures.DescribeQuery
    Infra.Adapters.Analyser.Sessions.Procedures.GetIndexes
    Infra.Adapters.Analyser.Sessions.Procedures.ResolveColumn
    Infra.Adapters.Analyser.Sessions.Procedures.ResolveColumn.Statements
    Infra.Adapters.Analyser.Sessions.Procedures.ResolveColumn.Statements.GetAttributeByRelationAndOffset
    Infra.Adapters.Analyser.Sessions.Procedures.ResolveParamNullabilities
    Infra.Adapters.Analyser.Sessions.Procedures.ResolveParamNullabilities.DefaultTextualValue
    Infra.Adapters.Analyser.Sessions.Procedures.ResolveTypeByOid
    Infra.Adapters.Analyser.Sessions.Procedures.ResolveTypeByOid.Statements
    Infra.Adapters.Analyser.Sessions.Procedures.ResolveTypeByOid.Statements.SelectAttributes
    Infra.Adapters.Analyser.Sessions.Procedures.ResolveTypeByOid.Statements.SelectEnumLabels
    Infra.Adapters.Analyser.Sessions.Procedures.ResolveTypeByOid.Statements.SelectRelationColumns
    Infra.Adapters.Analyser.Sessions.Procedures.ResolveTypeByOid.Statements.SelectType
    Infra.Adapters.Main

  build-tool-depends:
    autoexporter:autoexporter

  build-depends:
    algebraic-path,
    attoparsec,
    base,
    directory,
    fx,
    hasql,
    hasql-dev,
    hasql-mapping,
    hasql-pool,
    hasql-th,
    pgenie:gen-bridge,
    pgenie:interpreters,
    pgenie:logic,
    pgenie:utils,
    postgresql-libpq,
    resourcet,
    syntactic-class,
    testcontainers,
    testcontainers-postgresql,
    text,
    text-builder,
    uuid,
    vector,

library ui
  import: base
  hs-source-dirs: src/ui/
  exposed-modules:
    Ui
    Ui.Display.Components.Main
    Ui.Display.Components.Main.View

  other-modules:
    Ui.Commands
    Ui.Commands.Analyse
    Ui.Commands.Generate
    Ui.Commands.ManageIndexes
    Ui.Display
    Ui.Display.Components.ProgressBar
    Ui.Display.Components.ProgressBar.View
    Ui.Framework

  build-depends:
    optparse-applicative,
    pgenie:interpreters,
    pgenie:logic,
    pgenie:utils,
    text,
    text-builder,

test-suite ui-test
  import: test
  type: exitcode-stdio-1.0
  hs-source-dirs: src/ui-test
  main-is: Main.hs
  other-modules:
    Ui.Display.Components.MainSpec

  build-tool-depends:
    hspec-discover:hspec-discover

  build-depends:
    hspec,
    pgenie:interpreters,
    pgenie:ui,
    pgenie:utils,
    text,
    text-builder,

test-suite gen-bridge-test
  import: test
  type: exitcode-stdio-1.0
  hs-source-dirs: src/gen-bridge-test
  main-is: Main.hs
  other-modules:
    GenBridge.BundleSpec
    GenBridge.LoadSpec
    GenBridge.LoadV4Spec
    Test.Report

  build-tool-depends:
    hspec-discover:hspec-discover

  build-depends:
    aeson,
    hspec >=2.11 && <3,
    pgenie:gen-bridge,
    pgenie:gen-contract-v5,
    rerebase,
    text-builder,

test-suite gen-contract-v5-test
  import: test
  type: exitcode-stdio-1.0
  hs-source-dirs: src/gen-contract-v5-test
  main-is: GenContractV5TestMain.hs
  other-modules:
    GenContractV5.Input.AesonSpec
    GenContractV5.Input.DhallSpec
    GenContractV5.Input.ScalarSpec
    GenContractV5.Input.ValueSpec
    GenContractV5Spec

  build-tool-depends:
    hspec-discover:hspec-discover

  build-depends:
    aeson,
    containers,
    dhall,
    either,
    hspec >=2.11 && <3,
    pgenie:gen-contract-v4,
    pgenie:gen-contract-v5,
    pgenie:gen-contract-versioning,
    QuickCheck,
    rerebase,

test-suite gen-contract-v4-test
  import: test
  type: exitcode-stdio-1.0
  hs-source-dirs: src/gen-contract-v4-test
  main-is: GenContractV4TestMain.hs
  other-modules:
    GenContractV4.Fixtures.Project1
    GenContractV4.Input.AesonSpec
    GenContractV4.Input.DhallSpec

  build-tool-depends:
    hspec-discover:hspec-discover

  build-depends:
    aeson,
    cases,
    containers,
    dhall,
    either,
    hspec >=2.11 && <3,
    pgenie:gen-contract-v4,
    pgenie:utils,
    rerebase,
