cabal-version: 3.4
name: pgenie
version: 0
category: Database
synopsis: Type-safe PostgreSQL client code generator
description:
  Analyzes SQL migrations and queries to generate type-safe client libraries.

homepage: https://github.com/nikita-volkov/pgenie
bug-reports: https://github.com/nikita-volkov/pgenie/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2025, Nikita Volkov
license: GPL-3.0-or-later
license-file: LICENSE
extra-source-files:
  cabal.project
  README.md

source-repository head
  type: git
  location: https://github.com/nikita-volkov/pgenie

common base
  default-language: GHC2024
  default-extensions:
    ApplicativeDo
    BlockArguments
    DefaultSignatures
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    LiberalTypeSynonyms
    MagicHash
    MultiWayIf
    NoFieldSelectors
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    ParallelListComp
    PatternSynonyms
    RecordWildCards
    StrictData
    TypeFamilies
    ViewPatterns

common executable
  import: base
  ghc-options:
    -O2
    -threaded
    "-with-rtsopts=-N -I0 -qg"

executable pgn
  import: executable
  hs-source-dirs: src/pgn/
  main-is: Main.hs
  autogen-modules: Paths_pgenie
  other-modules: Paths_pgenie
  build-depends:
    base,
    pgenie-infra,
    pgenie-ui,
    pgenie-utils,
    text,
