cabal-version: 3.4
name: pgenie-interpreters
version: 0
category: Database
synopsis: Type-safe PostgreSQL client code generator - interpreters
license: GPL-3.0-or-later
license-file: ../LICENSE

common base
  default-language: GHC2024
  default-extensions:
    ApplicativeDo
    BlockArguments
    DefaultSignatures
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    LiberalTypeSynonyms
    MagicHash
    MultiWayIf
    NoFieldSelectors
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    ParallelListComp
    PatternSynonyms
    RecordWildCards
    StrictData
    TypeFamilies
    ViewPatterns

library
  import: base
  hs-source-dirs: src
  exposed-modules:
    Interpreters.Observing

  build-depends:
    monad-parallel,
    pgenie-logic,
    pgenie-utils,
    text,
