cabal-version: 3.4
name: pgenie-ui
version: 0
category: Database
synopsis: Type-safe PostgreSQL client code generator - ui
license: GPL-3.0-or-later
license-file: ../LICENSE

common base
  default-language: GHC2024
  default-extensions:
    ApplicativeDo
    BlockArguments
    DefaultSignatures
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    LiberalTypeSynonyms
    MagicHash
    MultiWayIf
    NoFieldSelectors
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    ParallelListComp
    PatternSynonyms
    RecordWildCards
    StrictData
    TypeFamilies
    ViewPatterns

common test
  import: base
  ghc-options:
    -threaded
    "-with-rtsopts=-N -I0 -qg"

library
  import: base
  hs-source-dirs: src
  exposed-modules:
    Ui
    Ui.Display.Components.Main
    Ui.Display.Components.Main.View

  other-modules:
    Ui.Commands
    Ui.Commands.Analyse
    Ui.Commands.Generate
    Ui.Commands.ManageIndexes
    Ui.Display
    Ui.Display.Components.ProgressBar
    Ui.Display.Components.ProgressBar.View
    Ui.Framework

  build-depends:
    optparse-applicative,
    pgenie-interpreters,
    pgenie-logic,
    pgenie-utils,
    text,
    text-builder,

test-suite ui-test
  import: test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    Ui.Display.Components.MainSpec

  build-tool-depends:
    hspec-discover:hspec-discover

  build-depends:
    hspec,
    pgenie-interpreters,
    pgenie-ui,
    pgenie-utils,
    text,
    text-builder,
