cabal-version: 3.4
name: pgenie-utils
version: 0
category: Database
synopsis: Type-safe PostgreSQL client code generator - utils
license: GPL-3.0-or-later
license-file: ../LICENSE

common base
  default-language: GHC2024
  default-extensions:
    ApplicativeDo
    BlockArguments
    DefaultSignatures
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    LiberalTypeSynonyms
    MagicHash
    MultiWayIf
    NoFieldSelectors
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    ParallelListComp
    PatternSynonyms
    RecordWildCards
    StrictData
    TypeFamilies
    ViewPatterns

library
  import: base
  hs-source-dirs: src
  exposed-modules:
    Utils.Prelude
    Utils.Text

  build-depends:
    algebraic-path,
    base,
    bytestring,
    containers,
    data-has,
    hashable,
    lawful-conversions,
    monad-parallel,
    mtl,
    profunctors,
    QuickCheck,
    quickcheck-instances,
    relations,
    syntactic-class,
    text,
    text-builder,
    text-builder-lawful-conversions,
    time,
    transformers,
    tuple,
    uuid,
    vector,
    vector-instances,
    witherable,
