cabal-version: 3.4
name: gen-contract-base
version: 0

common base
  default-language: GHC2024
  default-extensions:
    AllowAmbiguousTypes
    ApplicativeDo
    BlockArguments
    DefaultSignatures
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    LiberalTypeSynonyms
    MagicHash
    MultiWayIf
    NoFieldSelectors
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    ParallelListComp
    PatternSynonyms
    RecordWildCards
    StrictData
    TypeFamilies
    ViewPatterns

common test
  import: base
  ghc-options:
    -threaded
    "-with-rtsopts=-N -I0 -qg"

common executable
  import: base
  ghc-options:
    -O2
    -threaded
    "-with-rtsopts=-N -I0 -qg"

library
  import: base
  hs-source-dirs: library
  exposed-modules:
    GenContractBase.Aeson.Deriver
    GenContractBase.Dhall.Deriving
    GenContractBase.Dhall.Orphans

  other-modules:
    GenContractBase.Dhall.Decode
    GenContractBase.Dhall.Orphans.NonEmpty
    GenContractBase.Dhall.Orphans.Path
    GenContractBase.Prelude
    GenContractBase.Prelude.Path

  build-depends:
    aeson,
    algebraic-path,
    base,
    cases,
    dhall,
    prettyprinter,
    template-haskell,
    text,
    utils,
