cabal-version: 3.4
name: pgenie-gen-contract-base
version: 0

common base
  default-language: GHC2024
  default-extensions:
    ApplicativeDo
    BlockArguments
    DefaultSignatures
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    LiberalTypeSynonyms
    MagicHash
    MultiWayIf
    NoFieldSelectors
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    ParallelListComp
    PatternSynonyms
    RecordWildCards
    StrictData
    TypeFamilies
    ViewPatterns

library
  import: base
  hs-source-dirs: src
  exposed-modules:
    GenContractBase.Aeson.Deriver
    GenContractBase.Dhall.Decode
    GenContractBase.Dhall.Deriving
    GenContractBase.Dhall.Orphans
    GenContractBase.Dhall.Orphans.NonEmpty
    GenContractBase.Dhall.Orphans.Path
    GenContractBase.Prelude
    GenContractBase.Prelude.Path

  build-depends:
    aeson,
    algebraic-path,
    base,
    cases,
    dhall,
    pgenie-utils,
    prettyprinter,
    template-haskell,
    text,
