cabal-version: 3.4
name: gen-contract-v4
version: 0

common base
  default-language: GHC2024
  default-extensions:
    ApplicativeDo
    BlockArguments
    DefaultSignatures
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    LiberalTypeSynonyms
    MagicHash
    MultiWayIf
    NoFieldSelectors
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    ParallelListComp
    PatternSynonyms
    RecordWildCards
    StrictData
    TypeFamilies
    ViewPatterns

common test
  import: base
  ghc-options:
    -threaded
    "-with-rtsopts=-N -I0 -qg"

library
  import: base
  hs-source-dirs: library
  exposed-modules:
    GenContractV4
    GenContractV4.Fixtures
    GenContractV4.Input
    GenContractV4.Output

  other-modules:
    GenContractV4.Fixtures.Fixture1
    GenContractV4.Input.ArraySettings
    GenContractV4.Input.CustomType
    GenContractV4.Input.CustomTypeDefinition
    GenContractV4.Input.EnumVariant
    GenContractV4.Input.Member
    GenContractV4.Input.Migration
    GenContractV4.Input.Name
    GenContractV4.Input.Primitive
    GenContractV4.Input.Project
    GenContractV4.Input.Query
    GenContractV4.Input.QueryFragment
    GenContractV4.Input.Result
    GenContractV4.Input.ResultRows
    GenContractV4.Input.ResultRowsCardinality
    GenContractV4.Input.Scalar
    GenContractV4.Input.Value
    GenContractV4.Input.Var
    GenContractV4.Input.Version
    GenContractV4.Output.File
    GenContractV4.Output.Output
    GenContractV4.Output.OutputOk
    GenContractV4.Output.Report

  build-depends:
    aeson,
    cases,
    dhall,
    gen-contract-base,
    gen-contract-versioning,
    QuickCheck,
    rerebase,
    utils,

test-suite gen-contract-v4-test
  import: test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: GenContractV4TestMain.hs
  other-modules:
    GenContractV4.Input.AesonSpec
    GenContractV4.Input.DhallSpec

  build-tool-depends:
    hspec-discover:hspec-discover

  build-depends:
    aeson,
    containers,
    dhall,
    either,
    gen-contract-v4,
    hspec >=2.11 && <3,
    rerebase,
