cabal-version: 3.4
name: gen-contract-v4
version: 0

common base
  default-language: GHC2024
  default-extensions:
    AllowAmbiguousTypes
    ApplicativeDo
    BlockArguments
    DefaultSignatures
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    LiberalTypeSynonyms
    MagicHash
    MultiWayIf
    NoFieldSelectors
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    ParallelListComp
    PatternSynonyms
    RecordWildCards
    StrictData
    TypeFamilies
    ViewPatterns

common test
  import: base
  ghc-options:
    -threaded
    "-with-rtsopts=-N -I0 -qg"

common executable
  import: base
  ghc-options:
    -O2
    -threaded
    "-with-rtsopts=-N -I0 -qg"

library
  import: base
  hs-source-dirs: library
  exposed-modules:
    GenContractV4
    GenContractV4.Contract
    GenContractV4.Fixtures

  other-modules:
    GenContractV4.Contract.ArraySettings
    GenContractV4.Contract.CustomType
    GenContractV4.Contract.CustomTypeDefinition
    GenContractV4.Contract.EnumVariant
    GenContractV4.Contract.File
    GenContractV4.Contract.Member
    GenContractV4.Contract.Migration
    GenContractV4.Contract.Name
    GenContractV4.Contract.Output
    GenContractV4.Contract.OutputOk
    GenContractV4.Contract.Primitive
    GenContractV4.Contract.Project
    GenContractV4.Contract.Query
    GenContractV4.Contract.QueryFragment
    GenContractV4.Contract.Report
    GenContractV4.Contract.Result
    GenContractV4.Contract.ResultRows
    GenContractV4.Contract.ResultRowsCardinality
    GenContractV4.Contract.Scalar
    GenContractV4.Contract.Value
    GenContractV4.Contract.Var
    GenContractV4.Contract.Version
    GenContractV4.Fixtures.Fixture1

  build-depends:
    aeson,
    cases,
    dhall,
    gen-contract-base,
    gen-contract-versioning,
    QuickCheck,
    rerebase,
    utils,

test-suite gen-contract-v4-test
  import: test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: GenContractV4TestMain.hs
  other-modules:
    GenContractV4.Contract.AesonSpec
    GenContractV4.Contract.DhallSpec

  build-tool-depends:
    hspec-discover:hspec-discover

  build-depends:
    aeson,
    containers,
    dhall,
    either,
    gen-contract-v4,
    hspec >=2.11 && <3,
    rerebase,
