cabal-version: 3.4
name: gen-contract-v5
version: 0

common base
  default-language: GHC2024
  default-extensions:
    AllowAmbiguousTypes
    ApplicativeDo
    BlockArguments
    DefaultSignatures
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    LiberalTypeSynonyms
    MagicHash
    MultiWayIf
    NoFieldSelectors
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    ParallelListComp
    PatternSynonyms
    RecordWildCards
    StrictData
    TypeFamilies
    ViewPatterns

common test
  import: base
  ghc-options:
    -threaded
    "-with-rtsopts=-N -I0 -qg"

common executable
  import: base
  ghc-options:
    -O2
    -threaded
    "-with-rtsopts=-N -I0 -qg"

library
  import: base
  hs-source-dirs: library
  exposed-modules:
    GenContractV5
    GenContractV5.Fixtures
    GenContractV5.Input
    GenContractV5.Input.CustomTypeRef
    GenContractV5.Input.Scalar
    GenContractV5.Input.Value
    GenContractV5.Output

  other-modules:
    GenContractV5.Fixtures.Fixture1
    GenContractV5.Input.CustomType
    GenContractV5.Input.CustomTypeDefinition
    GenContractV5.Input.Member
    GenContractV5.Input.Project
    GenContractV5.Input.Query
    GenContractV5.Input.Result
    GenContractV5.Input.ResultRows

  build-depends:
    cases,
    dhall,
    gen-contract-base,
    gen-contract-v4,
    gen-contract-versioning,
    QuickCheck,
    rerebase,
    utils,

test-suite gen-contract-v5-test
  import: test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: GenContractV5TestMain.hs
  other-modules:
    GenContractV5.Input.AesonSpec
    GenContractV5.Input.DhallSpec
    GenContractV5.Input.ScalarSpec
    GenContractV5.Input.ValueSpec
    GenContractV5Spec

  build-tool-depends:
    hspec-discover:hspec-discover

  build-depends:
    aeson,
    containers,
    dhall,
    either,
    gen-contract-v4,
    gen-contract-v5,
    gen-contract-versioning,
    hspec >=2.11 && <3,
    QuickCheck,
    rerebase,
