cabal-version: 3.4
name: gen-contract-v5
version: 0

common base
  default-language: GHC2024
  default-extensions:
    AllowAmbiguousTypes
    ApplicativeDo
    BlockArguments
    DefaultSignatures
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    LiberalTypeSynonyms
    MagicHash
    MultiWayIf
    NoFieldSelectors
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    ParallelListComp
    PatternSynonyms
    RecordWildCards
    StrictData
    TypeFamilies
    ViewPatterns

common test
  import: base
  ghc-options:
    -threaded
    "-with-rtsopts=-N -I0 -qg"

common executable
  import: base
  ghc-options:
    -O2
    -threaded
    "-with-rtsopts=-N -I0 -qg"

library
  import: base
  hs-source-dirs: library
  exposed-modules:
    GenContractV5
    GenContractV5.Contract
    GenContractV5.Contract.CustomTypeRef
    GenContractV5.Contract.Scalar
    GenContractV5.Contract.Value
    GenContractV5.Fixtures

  other-modules:
    GenContractV5.Contract.CustomType
    GenContractV5.Contract.CustomTypeDefinition
    GenContractV5.Contract.Member
    GenContractV5.Contract.Project
    GenContractV5.Contract.Query
    GenContractV5.Contract.Result
    GenContractV5.Contract.ResultRows
    GenContractV5.Fixtures.Fixture1

  build-depends:
    cases,
    dhall,
    gen-contract-base,
    gen-contract-v4,
    gen-contract-versioning,
    QuickCheck,
    rerebase,
    utils,

test-suite gen-contract-v5-test
  import: test
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: GenContractV5TestMain.hs
  other-modules:
    GenContractV5.Contract.AesonSpec
    GenContractV5.Contract.DhallSpec
    GenContractV5.Contract.ScalarSpec
    GenContractV5.Contract.ValueSpec
    GenContractV5Spec

  build-tool-depends:
    hspec-discover:hspec-discover

  build-depends:
    aeson,
    containers,
    dhall,
    either,
    gen-contract-v4,
    gen-contract-v5,
    gen-contract-versioning,
    hspec >=2.11 && <3,
    QuickCheck,
    rerebase,
